--- a/profil.html
+++ b/profil.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body data-page="profil">
-  <header class="site-header">
+  <header class="site-header floating">
     <div class="container header-inner">
       <div class="brand">
         <img src="logo.png" alt="Assistenku Logo" class="logo-img" />
@@ -40,8 +40,9 @@
 
     <section class="section content">
       <h2>Sejarah Perusahaan</h2>
-      <p>Assistenku dimulai sebagai layanan komunal yang menyediakan tenaga terlatih untuk kebutuhan rumah tangga. Dengan visi meningkatkan kualitas layanan,
-      kami memperkenalkan standar SOP dan pelatihan internal sejak tahun pertama operasi.</p>
+      <p>Assistenku dimulai sebagai layanan komunal yang menyediakan tenaga terlatih untuk kebutuhan rumah tangga.
+         Dengan fokus pada pelatihan soft-skill dan SOP pelayanan, kami berkembang menjadi platform yang melayani rumah tangga
+         dan institusi.</p>
 
       <h2>Founder & Team</h2>
       <div class="founder-detail">
@@ -54,7 +55,7 @@
       </div>
 
       <h2>Legal & NIB</h2>
-      <p>Dokumen legal tersedia: <em>nib1.png</em> dan <em>nib2.png</em>. Simpanan dokumen fisik dan digital kami jaga keamanan serta dapat ditunjukkan bila diperlukan.</p>
+      <p>Dokumen legal tersedia: <em>nib1.png</em> dan <em>nib2.png</em>. Dokumen digital dan fisik tersimpan aman dan dapat ditunjukkan saat diperlukan.</p>
 
       <h2>Nilai & Komitmen</h2>
       <ol>
