--- a/index.html
+++ b/index.html
@@ -1,106 +1,95 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <link rel="stylesheet" href="style.css">
-<script defer src="script.js"></script>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Assistenku — Beranda</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Beranda | Assistenku</title>
   <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
 </head>
-<body data-page="index">
-  <header class="site-header floating">
-    <div class="container header-inner">
-      <div class="brand">
-        <img src="logo.png" alt="Assistenku Logo" class="logo-img" />
-        <div class="brand-text">
-          <div class="logo-text">ASSISTENKU</div>
-          <div class="tagline">Layanan Asisten Profesional & Pekerja Terlatih</div>
-        </div>
-      </div>
 
-      <div class="controls">
-        <button class="dark-toggle" aria-label="Toggle dark">🌙</button>
-        <button id="menuIcon" class="menu-icon" aria-label="Open menu">☰</button>
-      </div>
-    </div>
+<body>
 
-    <nav id="mainNav" class="main-nav">
+<header>
+  <div class="container navbar">
+    <img src="logo.png" class="logo" alt="Logo Assistenku">
+
+    <nav class="main-nav">
       <a href="index.html">Beranda</a>
       <a href="profil.html">Profil</a>
       <a href="layanan.html">Layanan</a>
       <a href="karir.html">Karir</a>
       <a href="kontak.html">Kontak</a>
     </nav>
-  </header>
 
-  <main class="container">
-    <section class="hero hero-startup">
-      <div class="hero-inner">
-        <div class="hero-copy">
-          <h1>Tenaga Profesional untuk Kebutuhan Sehari-hari Anda</h1>
-          <p class="lead">
-            Assistenku menyediakan tenaga rumah tangga, perawat lansia, baby sitter, sopir pribadi, dan tenaga pendukung profesional
-            lainnya. Seleksi ketat, pelatihan standar, dan kontrak fleksibel (per jam / harian / bulanan).
-          </p>
-          <div class="hero-cta">
-            <a class="btn primary" href="layanan.html">Lihat Layanan</a>
-            <a class="btn outline" href="karir.html">Daftar Karir</a>
-          </div>
-
-          <blockquote class="welcome">
-            <strong>Kata Sambutan Founder</strong>
-            <p>
-              "Kami percaya kualitas layanan dimulai dari kualitas SDM. Assistenku berkomitmen melatih dan menyeleksi tenaga kerja
-              agar memberikan rasa aman, nyaman, dan profesional kepada pengguna." — <em>Founder Assistenku</em>
-            </p>
-          </blockquote>
-        </div>
-
-        <div class="hero-media">
-          <img src="nib1.png" alt="NIB 1" class="hero-img" />
-          <img src="nib2.png" alt="NIB 2" class="hero-img small" />
-        </div>
-      </div>
-    </section>
-
-    <section class="section cards">
-      <h2>Kenapa Memilih Assistenku</h2>
-      <div class="grid-3">
-        <div class="card">
-          <h3>Seleksi Ketat</h3>
-          <p>Screening, verifikasi, pengecekan latar belakang, dan pelatihan dasar untuk semua kandidat.</p>
-        </div>
-        <div class="card">
-          <h3>Standard Operasional</h3>
-          <p>Protokol kerja, manual tugas, dan sistem pelaporan harian untuk menjaga kualitas layanan.</p>
-        </div>
-        <div class="card">
-          <h3>Transparansi Harga</h3>
-          <p>Paket harga jelas per jam/hari/bulan; dokumentasi biaya tersedia untuk klien (lihat halaman Layanan).</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="section about">
-      <h2>Sejarah Singkat</h2>
-      <p>Didirikan pada 2020, Assistenku lahir dari kebutuhan nyata masyarakat akan tenaga terpercaya. Kami mulai dari layanan lokal
-         dan berkembang memperkuat proses pelatihan dan pengawasan untuk memastikan layanan berkualitas.</p>
-
-      <h3>Visi & Misi</h3>
-      <ul>
-        <li><strong>Visi:</strong> Menjadi platform tenaga profesional terkemuka di Indonesia.</li>
-        <li><strong>Misi:</strong> Menyediakan tenaga terlatih, proses mudah, dan dukungan berkelanjutan untuk klien.</li>
-      </ul>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container">
-      <p>© 2025 Assistenku • Email: admin@assistenku.com</p>
+    <div class="menu-btn" id="menuBtn">
+      <img src="menu.png" alt="Menu">
     </div>
-  </footer>
+  </div>
+</header>
 
-  <script src="script.js"></script>
+<!-- Hero -->
+<section class="hero">
+  <h1>Solusi Tenaga Kerja Profesional untuk Rumah & Bisnis Anda</h1>
+  <p>Assistenku menyediakan layanan asisten rumah tangga, baby sitter,
+  perawat lansia, sopir pribadi, kebersihan, serta layanan bantuan harian 
+  yang aman, terpercaya, dan profesional.</p>
+</section>
+
+<!-- Sambutan -->
+<section class="section">
+  <div class="container">
+    <h2>Sambutan Founder</h2>
+    <p>
+      Assistenku hadir sebagai solusi modern bagi keluarga dan bisnis 
+      yang membutuhkan tenaga kerja harian maupun kontrak secara cepat 
+      dan profesional. Kami memulai perjalanan ini untuk membantu banyak 
+      orang mendapatkan layanan yang aman, tepercaya, dan terjangkau.
+    </p>
+    <p>
+      Dengan pengalaman lebih dari 5 tahun dalam pengelolaan SDM, 
+      Assistenku berkomitmen untuk menjaga kepercayaan pelanggan 
+      melalui pelatihan, verifikasi, dan standar kualitas yang tinggi.
+    </p>
+  </div>
+</section>
+
+<!-- Sejarah -->
+<section class="section">
+  <div class="container">
+    <h2>Sejarah Berdirinya Assistenku</h2>
+    <p>
+      Assistenku didirikan pada tahun 2020 dengan visi membantu masyarakat 
+      menemukan tenaga kerja rumah tangga dan profesional yang dapat diandalkan. 
+      Berawal dari layanan kecil, kini Assistenku berkembang menjadi platform 
+      layanan asisten pribadi yang membantu ratusan keluarga dan pelaku bisnis.
+    </p>
+  </div>
+</section>
+
+<!-- NIB -->
+<section class="section">
+  <div class="container">
+    <h2>Legalitas & Perizinan Usaha</h2>
+    <p>Berikut adalah dokumen legalitas usaha Assistenku:</p>
+
+    <div class="cards">
+      <div class="card">
+        <h3>NIB Perusahaan</h3>
+        <img src="NIB1.png" alt="NIB 1" style="width:100%; border-radius:10px;">
+      </div>
+
+      <div class="card">
+        <h3>Dokumen Legalisasi</h3>
+        <img src="NIB2.png" alt="NIB 2" style="width:100%; border-radius:10px;">
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <p>© 2025 Assistenku. Semua Hak Dilindungi.</p>
+</footer>
+
 </body>
 </html>
