--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Beranda</a></li>
+        <li><a href="index.html" class="active">Beranda</a></li>
         <li><a href="profil.html">Profil</a></li>
         <li><a href="layanan.html" id="navLayanan">Layanan</a></li>
         <li><a href="karir.html" id="navKarir">Karir</a></li>
@@ -35,20 +35,51 @@
 </header>
 
 <!-- HERO -->
-<div class="hero">
+<div class="hero hero-nopic">
   <div>
-    <h1>Solusi Asisten Profesional <br> Untuk Keluarga & Bisnis Anda</h1>
-    <p>
-      Assistenku hadir sebagai penyedia layanan asistensi terbaik di Indonesia.
-      Mulai dari asisten pribadi, pengasuhan bayi dan lansia, ART profesional,
-      hingga driver dan petugas kebersihan. Semua terlatih, tersertifikasi,
-      dan siap membantu Anda kapan pun dibutuhkan.
+    <h1>Selamat Datang di Assistenku</h1>
+    <p class="sambutan">
+      Terima kasih telah mengunjungi Assistenku, platform layanan asistensi profesional
+      yang hadir untuk menjadi solusi terpercaya bagi keluarga dan bisnis di Indonesia.
+      Kami percaya bahwa setiap keluarga berhak mendapatkan bantuan yang aman, terlatih,
+      dan berintegritas, sementara setiap pelaku usaha memerlukan tenaga kerja pendukung
+      yang disiplin, cekatan, dan berorientasi pelayanan.
+      <br><br>
+      Assistenku berdiri untuk menjembatani kebutuhan tersebut dengan menyediakan berbagai
+      layanan asistensi seperti asisten rumah tangga, pengasuhan bayi dan lansia, sopir pribadi,
+      petugas kebersihan, hingga tenaga operasional lainnya. Setiap tenaga yang kami salurkan
+      telah melalui proses seleksi ketat, pelatihan standar, serta pembinaan berkelanjutan demi
+      memastikan kualitas pelayanan terbaik bagi Anda.
     </p>
+
     <a class="btn-primary" href="layanan.html">Lihat Layanan</a>
   </div>
-
-  <img src="hero.jpg" alt="Ilustrasi Asisten Profesional">
 </div>
+
+<!-- VISI MISI -->
+<section>
+  <h2>Visi & Misi Assistenku</h2>
+
+  <div class="card-grid">
+    <div class="card">
+      <h3>Visi</h3>
+      <p>
+        Menjadi penyedia layanan asistensi paling tepercaya dan profesional di Indonesia,
+        yang mengutamakan keamanan, kualitas, dan kenyamanan setiap pelanggan.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Misi</h3>
+      <p>
+        • Menyediakan tenaga asistensi yang terlatih dan berkompeten.<br>
+        • Meningkatkan kesejahteraan pekerja melalui pelatihan dan pembinaan berkelanjutan.<br>
+        • Memberikan pelayanan cepat, transparan, dan ramah bagi seluruh pelanggan.<br>
+        • Menciptakan standar baru dalam layanan asistensi modern yang aman dan bersertifikat.
+      </p>
+    </div>
+  </div>
+</section>
 
 <section>
   <h2>Layanan Unggulan</h2>
